Fix exec position getting cut off

--- a/css/main.css
+++ b/css/main.css
@@ -247,12 +247,11 @@ section {
     margin-bottom: 12px;
 }
 
-.exec-overlay span{
+.exec-position {
     font-weight: 100;
     font-size: 24px;
     color: rgb(26,26,26);
     display: block;
-    line-height: 10px;
     text-align: right;
     margin-bottom: 24px; /* Give space when small screen stacks*/
 }
